2011-04-14 yusei
* Remove old unnecessary tales expression from relation string fields.

2011-04-04 yusei
* Fix tales expression on property "enabled" of my_view_mode_payment_date. This field cannot be displayed.

2011-03-30 nicolas
* Add internal trade conditions

2010-10-21 yusei
* Add reset movement price action to returned sale packing list.

2010-10-21 yusei
* Add reverse_arrow_category parameter to Order_applyTradeCondition. This option is useful when trade condition is applied to returned packing list.

2010-10-15 nicolas.dumazet
* No restrictions on subtypes of Order portal type

2010-09-30 nicolas.dumazet
* Add abstract Order portal type to be able to create temporary documents of Order portal type.

2010-08-07 JPS
* make the terms match payment condition and capacity property sheets in TradeModelPath_view

2010-07-15 yusei
* Add source_carrier, source_referral, source_function, destination_carrier, destination_referral, destination_function to copied category list of trade condition.

2010-06-22 JPS
* Business Path now split into Business Link and Trade Model Path

2010-06-21 yo
* Specify the inventory group to the portal type Inventory.

2010-06-08 kazuhiko
* 'Validate Inventory Action' should be allowed for Assignor.

2010-06-03 yo
* Add details tabs into Returned Sale Packing List and Returned Purchase Packing List for consistency.

2010-06-01 kazuhiko
* Use the same dependencies for Delivery_updateApplideRule to make it possible to merge activities.

2010-05-24 kazuhiko
* Improve activity dependencies for Delivery_updateAppliedRule, eg. delivery.activate(tag='(path)_updateAppliedRule', after_tag='(path)_expand').Delivery_updateAppliedRule(activate_kw={'tag':'(path)_expand'})

2010-05-24 yusei
* Update Movement_getUseItemList. Add an empty select option to the result.

2010-05-21 yusei
* Display preferred base amounts in base contribution list and base application list.

2010-05-21 yusei