@@ -131,16 +131,12 @@
                           <string>Resource</string>
                         </tuple>
                         <tuple>
+                          <string>order_item</string>
+                          <string>Order</string>
+                        </tuple>
+                        <tuple>
                           <string>variation_category_item_list</string>
                           <string>Variation</string>
-                        </tuple>
-                        <tuple>
-                          <string>getQuantity</string>
-                          <string>Order Quantity</string>
-                        </tuple>
-                        <tuple>
-                          <string>order_quantity_unit</string>
-                          <string>Order Quantity Unit</string>
                         </tuple>
                         <tuple>
                           <string>getCurrentInventory</string>
@@ -155,7 +151,7 @@
                           <string>Future</string>
                         </tuple>
                         <tuple>
-                          <string>getQuantityUnit</string>
+                          <string>quantity_unit_item</string>
                           <string>Unit</string>
                         </tuple>
                       </list>
@@ -192,10 +188,6 @@
                     <key> <string>editable_columns</string> </key>
                     <value>
                       <list>
-                        <tuple>
-                          <string>order_quantity_unit</string>
-                          <string>Order Quantity Unit</string>
-                        </tuple>
                         <tuple>
                           <string>variation_category_item_list</string>
                           <string>Variation</string>
@@ -273,7 +265,7 @@
       <dictionary>
         <item>
             <key> <string>method_name</string> </key>
-            <value> <string>getFutureInventoryList</string> </value>
+            <value> <string>Delivery_getStockList</string> </value>
         </item>
       </dictionary>
     </pickle>
